Minor Edits and Added Danni's Intro Slides

--- a/BJUnlimitedfinaltalk.tex
+++ b/BJUnlimitedfinaltalk.tex
@@ -49,93 +49,121 @@
 
 \author{ 
 %    \vspace{5pt}
-    {\bf{Presenter:}} \\ 
-Steven Su \\ 
+    {\bf{Presenters:}}\\ 
+Ahmed Aly\\
+Steven Su \\
+Danni Tang\\ 
     \vspace{5pt}
 } 
 \institute{JHU AMS 550.400 Fall 2012}
-
 \date{Last Complied on \today} 
 
 \begin{document}
 
 \begin{frame}[plain]
-    \titlepage
+	\titlepage
 \end{frame}
 
-\begin{frame}
-    \frametitle{Overview}
-    {\small \tableofcontents}
+\begin{frame} [allowframebreaks]
+	\frametitle{Overview}
+{\small \tableofcontents}
 \end{frame}
+
 
 \section{Introduction}
 
-\subsection{Participants and Sponsors}
+\begin{frame}
+	\frametitle{Advantage in Sports}
+		\begin {itemize}
+			\item A loud and supportive home crowd is the ultimate home team advantage for sports teams
+			\item Home crowd advantage effects the result of the game, shown by past research:
+			\begin{itemize}
+				\item In US professional sporting leagues, home teams can win approximately 60\% of the time \cite{Jamieson_2010}
+				\item In US college athletics, home teams can win approximately 66\% of games player \cite{Snyder_1985}
+			\end{itemize}
+		\end {itemize}
+\end{frame}
 
 \begin{frame}
-	\frametitle{Participants and Sponsors}
-	\begin {itemize}
-		\item Student participants:
-			\begin {itemize}
-				\item Steven Su
-				\item Danni Tang
-				\item Ahmed Aly
-			\end {itemize}
-		\item Sponsor: Blue Jays Unlimited	
-	\end {itemize}
+	\frametitle{What is Cheering?}
+		\begin{itemize}
+		\item Home crowd can also improve the ambiance of a sporting event
+		\item Can show support and enhancing the atmosphere by "cheering":
+		\begin{itemize}
+			\item Chanting the school fight song
+			\item Waving a rally towel
+			\item Doing the wave
+			\item Clapping in general
+		\end{itemize}
+	\item Cheering is essential at collegiate sporting events; improves experience for both teams and the fans
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{The Johns Hopkins Blue Jays}
+		\begin{itemize}
+			\item The Blue Jays have amassed 47 national championships and 187 conference titles.\cite{hopathletic}
+			\item The Blue Jays have excelled at many sports including:
+			\begin{itemize}
+				\item The Men's Lacrosse team has won 44 national championships, most recently in 2007.\cite{hopathletic}
+				\item The Men's Swimming team won 32 conference championships, including a streak of 28 consecutive conference championships from 1971-1998.\cite{hopathletic}
+				\item The Men's Football and Baseball teams were each conference champions for three consecutive years from 2009-2011. \cite{hopathletic}
+		\end{itemize}
+	\end{itemize}
 \end{frame}
 
 \subsection{Sponsor Information}
 
 \begin{frame}
-    \frametitle{Who are Blue Jays Unlimited?}
-    \begin {columns}
-    	\begin{column}{0.5\textwidth}
-    		\begin {itemize}
-    			\item Blue Jays Unlimited (BJU) was established in 1995 \cite{bjuwebsite}
-    			\item Volunteer group of over 3000 alumni, friends, and staff, based in Baltimore, MD, dedicated to supporting and promoting Johns Hopkins University (JHU) athletics \cite{bjuwebsite}
-    			\item Official booster club for JHU athletics \cite{bjuwebsite}
-    		\end {itemize}
-    	\end {column}
-    	\begin {column}{0.5\textwidth}
-    	\begin{figure} [h]
-    		\begin{center}
-    			\includegraphics [width=2in] {BJU.jpg}
-    			\caption {{\tiny The logo of Blue Jays Unilimited. \textit{Courtesy of: http://www.hopkinssports.com/bluejays-unlimited/}}}
-    		\end{center}
-    	\end {figure}	
-    	\end {column}
-    \end{columns}
+	\frametitle{Who are Blue Jays Unlimited?}
+		\begin {columns}
+			\begin{column}{0.5\textwidth}
+				\begin {itemize}
+					\item Blue Jays Unlimited (BJU) was established in 1995 \cite{bjuwebsite} by a volunteer group of alumni, friends, and staff
+					\item Has more than 3000 active members dedicated to supporting and promoting Johns Hopkins University (JHU) athletics \cite{bjuwebsite}
+					\item Official booster club for JHU athletics \cite{bjuwebsite}
+				\end {itemize}
+			\end {column}
+			\begin {column}{0.5\textwidth}
+				\begin{figure} [h]
+					\begin{center}
+						\includegraphics [width=2in] {BJU.jpg}
+						\caption {{\tiny The logo of Blue Jays Unilimited. \textit{Courtesy of: http://www.hopkinssports.com/bluejays-unlimited/}}}
+					\end{center}
+				\end {figure}
+			\end {column}
+		\end{columns}
 \end{frame}
 
 \begin{frame}
 	\frametitle{What Does BJU do for Hopkins?}
 	\begin {columns}
 		\begin {column} {0.5\textwidth}
-			\begin {itemize}
-				\item Raised more than \$4 million in funds to improve experience for JHU student athletes and fans alike \cite{bjuwebsite}
-				\item Funds provide money for capital projects as well as scholarships and operational endowments \cite{bjuwebsite}
-				\item Past projects include renovation of the Newton H.~White Athletic Center and recognition banners for championship teams. \cite{bjuwebsite}
-			\end {itemize}
-		\end {column}
-		\begin{column} {0.5\textwidth}
-			\begin{figure}
+		\begin {itemize}
+			\item Raised more than \$4 million in funds to improve experience for JHU student athletes and fans alike \cite{bjuwebsite}
+			\item Funds provide money for capital projects as well as scholarships and operational endowments \cite{bjuwebsite}
+			\item Past projects include renovation of the Newton H.~White Athletic Center and recognition banners for championship teams. \cite{bjuwebsite}
+		\end {itemize}
+	\end {column}
+	\begin{column} {0.5\textwidth}
+		\begin{figure}
 			\begin{center}
 				\includegraphics [width=2in] {AthleticCenter.jpg}
 				\caption{{\tiny The Newton H.~White Athletic Center after renovations. \textit{Courtesy of: http://events.jhu.edu/WhiteAthleticCenter\#.UHhNK1GRWSo}}}
 			\end{center}
-			\end {figure}
-		\end {column}
-	\end {columns}
-\end {frame}   
+		\end {figure}
+	\end {column}
+\end {columns}
+\end {frame}
 
 \begin{frame}
-    \frametitle{BJU at Sporting Events}
-    \begin{itemize}
-    	\item BJU is present at nearly all major JHU sporting events
-    	\item Encourage fans to cheer on their Blue Jays to victory in a vociferous and family-friendly manner
-    	\item BJU's goal is to provide Hopkins' teams with the ultimate advantage: a spirited home crowd
-    \end{itemize}
+\frametitle{BJU at Sporting Events}
+\begin{itemize}
+\item BJU is present at nearly all major JHU sporting events
+\item Encourage fans to cheer on their Blue Jays to victory in a vociferous and family-friendly manner
+\item BJU is interested in maximizing the amount of fan participation in cheering at sporting events to provide the ultimate advantage: a spirited home crowd
+\item They believe they can increase fan participation in cheering events by strategically placing ``cheer starters"--student volunteers who lead and urge other fans around them to cheer
+\end{itemize}
 \end{frame}
 
 \section{Problem Statement}
@@ -144,61 +172,62 @@ Steven Su \\
 
 \begin{frame}
 	\frametitle{Problem Statement Background: Why is Cheering Important?}
-		\begin{itemize}
-			\item A loud and supportive home crowd is the ultimate home team advantage to any collegiate sports team. 
-			\item Fan participation in events such as chanting the school fight song, waving a rally towel, doing the wave, or general applause, show support for the home team as well as enhance the general atmosphere of a sporting event. 
-			\item Note that we will hence refer to all these activities as ``cheering''.
-		\end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Problem Statement}
-			\begin {itemize}
-				\item BJU is interested in maximizing cheering at Homewood Field located on the Homewood campus of JHU in Baltimore, MD. 
-				\item BJU believes that they can increase cheering by placing ``cheer starters'' in the home crowd.
-				\item ``Cheer starters'' are student volunteers who urge other fans around them to cheer. 
-			\end {itemize}
+	\begin{itemize}
+	\item A loud and supportive home crowd is the ultimate home team advantage to any collegiate sports team.
+	\item Fan participation in events such as chanting the school fight song, waving a rally towel, doing the wave, or general applause, show support for the home team as well as enhance the general atmosphere of a sporting event.
+	\item Note that we will hence refer to all these activities as ``cheering''.
+	\end{itemize}
 \end{frame}
 
 \subsection{Official Problem Statement}
 
 \begin{frame}
 	\frametitle{Official Problem Statement}
-	\begin{itemize}
-		\item BJU wants to know if ``cheer starters'' can actually increase cheering and also want a simple model of fan participation in cheering.
-	\end{itemize}
+		\begin{itemize}
+			\item BJU wants to know if ``cheer starters'' can actually increase cheering and also want a simple model of fan participation in cheering.
+		\end{itemize}
 \end{frame}
 
 \section {Objectives}
+
+\begin{frame}
+	\frametitle{Objective Statements}
+		\begin{itemize}
+			\item Our task is to provide BJU with a simple model of fan participation in cheering at Homewood Field
+			\item We will also provide simulation results from the model which determine if their belief about cheer starters is accurate
+			\item If cheer starters are effective, and time permitting, we will provide BJU with details about the quantity and location at which cheer starters should be placed in order to maximize cheering
+		\end{itemize}
+\end{frame}
 
 \subsection{Important Details to Consider}
 
 \begin{frame}
 	\frametitle {Important Details To Consider}
-		\begin {columns}
-			\begin {column}{0.5\textwidth}
-				\begin{itemize}
-					\item Homewood Field's capacity is approximately 8500 spectators \cite{wiki}
-					\item Long rectangular section of the bleachers in the lower left is traditionally reserved for Blue Jays' fans and seats approximately 4000 fans.
-				\end {itemize}
-			\end {column}
-			\begin {column}{0.5\textwidth}
-			\begin {figure}
-				\begin{center}
-    			\includegraphics [width=2in] {Bleachers.png}
-    			\caption {{\tiny A satellite image of Homewood Field. The home team bleachers are highlighted in red. \textit{Courtesy of: www.google.com}}}
-    		\end{center}
-    	\end{figure}	
-			\end {column}
-		\end {columns}
+	\begin {columns}
+		\begin {column}{0.5\textwidth}
+		\begin{itemize}
+			\item Homewood Field's capacity is approximately 8500 spectators \cite{wiki}
+			\item Long rectangular section of the bleachers in the lower left is traditionally reserved for Blue Jays' fans and seats approximately 4000 fans.
+		\end {itemize}
+	\end {column}
+	\begin {column}{0.5\textwidth}
+	\begin {figure}
+	\begin{center}
+		\includegraphics [width=2in] {Bleachers.png}
+		\caption {{\tiny A satellite image of Homewood Field. The home team bleachers are highlighted in red. \textit{Courtesy of: www.google.com}}}
+		\end{center}
+	\end{figure}
+\end {column}
+\end {columns}
 \end{frame}
+
 
 \begin{frame}
 	\frametitle{Important Details to Consider}
-		\begin{itemize}
-			\item Home bleachers are usually filled to capacity for all major Hopkins sporting events
-			\item Because of how fans normally sit, BJU is specifically interested in maximizing cheering in the home team bleachers
-		\end{itemize}
+	\begin{itemize}
+		\item Home bleachers are usually filled to capacity for all major Hopkins sporting events
+		\item Because of how fans normally sit, BJU is specifically interested in maximizing cheering in the home team bleachers
+	\end{itemize}
 \end{frame}
 
 \subsection{Official Objectives}
@@ -206,9 +235,9 @@ Steven Su \\
 \begin{frame}
 	\frametitle {Official Objectives}
 	\begin {itemize}
-		\item Our task is to provide BJU with a simple model of fan participation in cheering at Homewood Field in the home team bleachers as well as simulation results from the model which determine if their belief about cheer starters is accurate. 
+		\item Our task is to provide BJU with a simple model of fan participation in cheering at Homewood Field in the home team bleachers as well as simulation results from the model which determine if their belief about cheer starters is accurate.
 		\item If cheer starters are found to be effective, we will attempt to provide BJU with more details about the quantity and location at which cheer starters should be placed in order to maximize cheering.
-	\end {itemize} 
+		\end {itemize}
 \end{frame}
 
 \section {Approach}
@@ -476,7 +505,7 @@ To simulate the passing of time:
 
 \subsection{}
 
-\begin {frame}
+\begin {frame} [allowframebreaks]
 	\frametitle{References}
 	\bibliographystyle{plain}
 	%\nocite{*}
@@ -491,3 +520,4 @@ To simulate the passing of time:
 \end{frame}
 
 \end{document}
+\end{flushleft
