--- a/BJUnlimitedfinaltalk.tex
+++ b/BJUnlimitedfinaltalk.tex
@@ -64,7 +64,7 @@ Danni Tang\\
 	\titlepage
 \end{frame}
 
-\begin{frame} [allowframebreaks]
+\begin{frame}
 	\frametitle{Overview}
 {\small \tableofcontents}
 \end{frame}
